# commonroad-carla-interface

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  carlacr_main_function.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
carla_interface/: CarlaInterface.py  CarlaPedestrianHandler.py  CarlaVehicleInterface.py  CommonRoadEgoInterface.py  CommonRoadObstacleInterface.py  Gif_Creator.py  README.md  cr_sim_example_no_mpl.py  synchronous_mode.py
carlacr/: __init__.py  carla_interface.py  carla_mode.py  carla_motion_planner_helper.py  carla_motion_planner_mode.py  carla_pedestrian_handler.py  carla_replay_mode.py  carla_traffic_generation_mode.py  carla_vehicle_interface.py  command_line_interface.py  commonroad_ego_interface.py  commonroad_obstacle_interface.py  example_replay_mode.py  gif_creator.py  main.py  synchronous_mode.py  vehicle_dict.py
carlacr/agents/navigation/: basic_agent.py  behavior_agent.py  controller.py  local_planner.py  (+1 more)
carlacr/configurations/: configuration.py  configuration_builder.py  set_configs.py
carlacr/controller/: commonroad_planner.py  controller.py  keyboard_controller.py  pedestrian_controller.py  reactive_planner.py  steering_wheel.py  vehicle_controller.py
carlacr/game/: birds_eye_view.py  ego_view.py  game_interface.py
carlacr/helper/: carla_interface_helper.py  carla_motion_planner_helper.py  config.py  gif_creator.py  planner.py  synchronous_mode.py  traffic_generation.py  utils.py  vehicle_dict.py
carlacr/interface/: __init__.py  carla_interface.py  carla_pedestrian_handler.py  carla_vehicle_interface.py  commonroad_ego_interface.py  commonroad_obstacle_interface.py  control_interface.py  ego_interface.py  game_interface.py  obstacle_interface.py  pedestrian_interface.py  traffic_light.py  vehicle_interface.py
carlacr/mode/: carla_2d_mode.py  carla_mode.py  carla_motion_planner_mode.py  carla_replay_mode.py  carla_traffic_generation_mode.py  synchronous_mode.py
carlacr/objects/: actor.py  obstacle_interface.py  pedestrian.py  traffic_light.py  vehicle.py
carlacr/visualization/: birds_eye_view.py  common.py  ego_view.py  visualization2D.py  visualization3D.py  visualization_base.py
carlacr_old/helper/: carla_interface_helper.py
carlacr_old/interface/: carla_interface.py  carla_vehicle_interface.py  commonroad_obstacle_interface.py
carlacr_old/mode/: carla_mode.py  synchronous_mode.py
ci/: .gitlab-ci.yml  Dockerfile  README.md  apt_dependencies.txt  pip_dependencies.txt
configurations/: configuration.py  configuration_builder.py  set_configs.py
configurations/defaults/: carla_config.yaml  carla_pedestrians.yaml
crcarla/: carla_interface.py
crcarla/controller/: commonroad_planner.py  controller.py  keyboard_controller.py  reactive_planner.py  speed_tracking_controller.py  steering_wheel.py  vehicle_controller.py
crcarla/helper/: config.py  traffic_generation.py  utils.py
crcarla/objects/: actor.py  pedestrian.py  traffic_light.py  vehicle.py
crcarla/visualization/: controller_debug.py  visualization2D.py  visualization3D.py
docs/: Carlacr_OnlyClass.drawio  README.md  README.txt  carla_interface_api.md  config_api.md  controller_api.md  docs_requirements.txt  example.md  helper_api.md  index.md  keyboard.md  objects_api.md  open_html.sh  setup.sh  tips.md  visualization_api.md
docs/public/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py  index.rst
docs/use_cases/: use_cases.pptx
eval_paper/: create_cr_maps.py  eval_generated_scenarios.py  map_conversion_vis.py  motion_planning.py  motion_planning_carla_map.py  scenario_generation.py  scenario_generation_vis.py
eval_paper/map_conversion/: DEU_Backnang-7_5_T-1.xml
maps/: DEU_Aachen-16_21_I-1.cr.xodr  DEU_Backnang-7_5_T-1.xodr  DEU_Dresden-41_14_I-1.cr.xodr  DEU_Hamburg-35_11_I-1.cr.xodr  DEU_Test-1_1_T-1_no_center.xodr  DEU_Test-1_1_T-4.xodr  ZAM_Test-1_2_T-1.xodr  four_way_crossing.xodr
scenarios/: DEU_Test-1_1_T-1.xml  DEU_Test-1_1_T-2.xml  DEU_Test-1_1_T-3.xml  DEU_Test-1_1_T-4.xml  ZAM_FourWayIntersectionTest-1_1_T-1.xml  ZAM_Test-1_1_T-1.xml  ZAM_Tutorial-1_1_T-1.xml  ZAM_Tutorial-1_2_T-1.xml  ZAM_Zip-1.xml  ZAM_Zip-1_19_T-1.xml  four_way_crossing_Modi.xml
scripts/eval_paper/: map_conversion_vis.py  scenario_generation.py  visualize_generated_cr_scenario.py
tests/: README.md  controllers_test.py  main.py  rp_planner_test.py  run_tests.py  spawn_test.py  test_ci.py  test_requirements.txt  utils.py
tests/base_test_case/: carla_server_test_case.py  my_test_case.py
tests/helpers/: motion_planner_config.py
tests/test_motion_planner_mode/: test_motion_planner_mode.py
tests/test_replay_mode/: test_replay_mode.py
tests/test_traffic_mode/: test_traffic_generation_mode.py
tests/traffic_light_tests/: test_tl_cycle_creation.py  test_tl_cycle_extraction.py
tutorials/: automaton_planner_carla_map.py  carla_config.yaml  cr_scenario_replay.ipynb  cr_scenario_replay.py  cr_sim_example.py  cr_sim_example_no_mpl.py  cr_sim_example_offscreen.py  cr_simple_start.py  cr_simple_start_offscreen.py  example_replay_mode.py  example_traffic_generation_mode.ipynb  keyboard_control.ipynb  keyboard_control.py  manual_control_steeringwheel.py  minimal_example.py  motion_planning.ipynb  motion_planning.py  motion_planning_ackermann.py  motion_planning_carla_map.py  motion_planning_pid.py  motion_planning_sync.py  motion_planning_with_cr_prediction.py  scenario_gen_config.yaml  scenario_generation.ipynb  scenario_generation.py  scenario_generation_advanced.py  scenario_generation_simple.py  steering_wheel_control.ipynb  steering_wheel_control.py
tutorials/maps/: DEU_Test-1_1_T-2.xodr
tutorials/notebooks/: cr_scenario_replay.ipynb  keyboard_control.ipynb  motion_planning.ipynb  scenario_generation.ipynb  steering_wheel_control.ipynb
tutorials/pid_tuner/: code_example.py  pid_tuner.py  utils.py
tutorials/scenarios/: DEU_Test-1_1_T-2.xml  DEU_Test-1_1_T-4.xml
typings/carla/: __init__.pyi  command.pyi
(+85 files in other folders)
