[tool.poetry]
name = "CommonRoad-Carla-Interface"
version = "0.0.1"
description = "Interface between CommonRoad and the traffic simulator CARLA."
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "TODO"
readme = "README.md"
homepage = "https://commonroad.in.tum.de"
keywords= ["autonomous", "automated", "vehicles", "driving", "motion", "planning", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
packages = [{include = "carlacr"}]

#[tool.poetry.urls]
#Documentation = "https://commonroad.in.tum.de/static/docs/commonroad-io/index.html"
#Forum = "https://commonroad.in.tum.de/forum/c/commonroad-io"
#Source = "https://gitlab.lrz.de/tum-cps/commonroad_io"


[tool.poetry.dependencies]
python = "^3.8"
pygame = ">=2.1.2"
commonroad-io = "2023.3"
carla = "0.9.14"
omegaconf = ">=2.1.2"
commonroad-drivability-checker = "~=2023.1"
commonroad-vehicle-models = "~=3.0.2"

psutil = "^5.9.4"
commonroad-scenario-designer = { git = "git@gitlab.lrz.de:cps/commonroad-scenario-designer.git", branch = "develop" }
commonroad-reactive-planner = { git = "git@gitlab.lrz.de:cps/reactive-planner.git", branch = "feature/support-crio-2023-3" }
commonroad-prediction = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-prediction.git", branch = "develop" }


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
prospector = {extras = ["with-mypy"], version = "^1.9.0"}


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.22"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
